fixed overlapping section
fixed overlapping hero and about section

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .about-section {
-    @apply min-h-screen grid p-6 md:p-10 py-10 md:grid-cols-2 md:grid-rows-1 grid-rows-[auto_1fr];
+    @apply relative grid py-20 p-6 md:p-10 md:grid-cols-2 md:grid-rows-1 grid-rows-[auto_1fr];
   }
 
   .about-section p {
@@ -13,7 +13,8 @@
     @apply flex-1 flex-col flex items-center space-y-4 py-6 md:py-0;
   }
 
-  .left-side-content, .right-side-content {
+  .left-side-content,
+  .right-side-content {
     @apply flex flex-col flex-1 justify-center p-6 gap-5;
   }
 }
